# reservoir_engine

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  database.py  main.py
app/pages/: __init__.py  dca.py  eda.py  type_curves.py  uplift.py
docs/: DATA_REQUIREMENTS.md  MODULARITY_REVIEW.md
src/reservoir_engine/: __init__.py  config.py
src/reservoir_engine/data/: __init__.py  loaders.py  schemas.py  storage.py
src/reservoir_engine/dca/: __init__.py  autofit.py  forecast.py  gas_dca.py  models.py  sagd_dca.py
src/reservoir_engine/eda/: __init__.py  analysis.py  plots.py
src/reservoir_engine/type_curves/: __init__.py  aggregation.py  probabilistic.py  selection.py
src/reservoir_engine/uplift/: __init__.py  features.py  inference.py  models.py
tests/: __init__.py  conftest.py
tests/test_dca/: __init__.py  test_autofit.py  test_forecast.py  test_gas_dca.py  test_models.py  test_sagd_dca.py
tests/test_eda/: __init__.py  test_analysis.py
tests/test_type_curves/: __init__.py  test_probabilistic.py  test_selection.py
tests/test_uplift/: __init__.py  test_features.py
